# stt-web

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  DEBUGGING_STATUS.md  LICENSE  README.md  worker.js
.cargo/: config.toml
agents/: AGENT-1-WEIGHTS.md  AGENT-2-MIMI.md  AGENT-3-MODEL.md  AGENT-4-WEB.md  AGENT-5-INTEGRATION.md
convergence/: log.md  prompts  templates  tools
convergence/notes/: migrate-stt-web-to-mimi-rs-end-to-end-next.md
convergence/queues/: migrate-stt-web-to-mimi-rs-end-to-end-global-review.md  migrate-stt-web-to-mimi-rs-end-to-end-self-review.md  migrate-stt-web-to-mimi-rs-end-to-end.md
convergence/research/: migrate-stt-web-to-mimi-rs-end-to-end.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/1-commit-decode-path/: 1.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/2-merge-to-main/: 1.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/3-update-git-dep/: 1.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/4-wasm-build/: 1.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/5-run-tests/: 1.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/5b-rtf-capture/: 1.md  2.md
convergence/steps/migrate-stt-web-to-mimi-rs-end-to-end/acceptance-check/: 1.md
crates/mimi-wasm/: Cargo.toml  README.md  TENSOR_MAP.md
crates/mimi-wasm/src/: conv.rs  lib.rs  quantization.rs  seanet.rs  tensor.rs  transformer.rs  weights.rs
crates/stt-wasm/: Cargo.toml
crates/stt-wasm/src/: gguf.rs  lib.rs  mimi_encoder.rs  mimi_remap.rs  model.rs  stream.rs  tokenizer.rs
crates/stt-wasm/src/web/: bindings.rs  mod.rs
crates/stt-wasm/src/wgsl/: shader_naive.wgsl
crates/stt-wasm/tests/: e2e_pytorch_mimi.rs  e2e_transcript.rs  e2e_wav.rs  full_forward.rs  q4_matmul.rs  streaming.rs
docs/: OVERVIEW.md  TENSOR_NAMING.md
pkg/: package.json  stt_wasm.d.ts  stt_wasm.js  stt_wasm_bg.wasm.d.ts
scripts/: README.md  download-assets.sh  eval.py  gen-cert.sh  quantize.py  requirements.txt  strip_mimi.py  test_mimi_codec.py
tests/reference/: config.json  mimi_tokens.json  text_tokens.json  transcript.txt
web/: FIREFOX-WEBGPU.md  audio-processor.js  index.html  serve.mjs  stt-client.js  tokenizer.js  worker.js
whisper/: README.md  build.sh  whisper-client.js  worker.js
whisper/pkg/: libwhisper.js  libwhisper.wasm
whisper/src/: whisper_wasm.cpp
