[package]
name = "stt-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "STT 1B transformer in Burn+wgpu — runs natively and in browser via WASM+WebGPU"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["wgpu", "native-tokenizer"]
wgpu = ["burn/wgpu", "burn/template"]
native-tokenizer = ["tokenizers"]
wasm = [
    "wgpu",
    "dep:wgpu",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "getrandom/wasm_js",
]
cli = ["clap", "indicatif"]

hub = ["hf-hub"]

[dependencies]
# Burn ML framework
burn = { workspace = true }
cubecl = { workspace = true }

# Mimi audio codec (candle-based, shared with tts-web)
mimi-rs = { git = "https://github.com/idle-intelligence/mimi-rs.git", branch = "feat/rvq-quantizer-streaming-encode" }
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.4"
half = "2"

# Core
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = { workspace = true }

# Audio
hound = { workspace = true }

# Tokenizer (native only — has C dependencies)
tokenizers = { workspace = true, optional = true }

# CLI (optional)
clap = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

# HuggingFace Hub (optional)
hf-hub = { workspace = true, optional = true }

# WASM support (optional)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
pollster = "0.4"

